# flashcards

./: .gitignore  pyproject.toml
backend/: app.py
backend/api/endpoints/: auth.py
backend/api/v1/endpoints/: auth.py  flashcards.py  folders.py
backend/core/: config.py  security.py
backend/crud/: __init__.py  flashcard.py  folder.py  user.py
backend/db/: session.py
backend/models/: flashcard.py  folder.py  user.py
backend/schemas/: flashcard.py  folder.py  user.py
backend/tests/: test_app.py
backend/users/: routers.py
flashcards/: app.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend-v2/: index.html  login.html
frontend-v2/javascript/: login.js
frontend-v2/javascript/login/: tabs.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: flashcard-content.tsx  flashcard-preview.tsx  flashcard-system.tsx  flashcards.tsx  folder-sidebar.tsx  header.tsx  login-form.tsx  signup-form.tsx  user-profile.tsx  welcome-screen.tsx
frontend/src/: App.jsx  index.css
frontend/src/components/: Flashcard.jsx  Login.jsx  Signup.jsx
tests/: test_app.py
